--- a/C# Web Basics/CustomSoftUniServer/SUS/Apps/MyFirstMvcApp/MyFirstMvcApp.csproj
+++ b/C# Web Basics/CustomSoftUniServer/SUS/Apps/MyFirstMvcApp/MyFirstMvcApp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\SUS.HTTP\SUS.HTTP.csproj" />
+    <ProjectReference Include="..\..\SUS.MvcFramework\SUS.MvcFramework.csproj" />
   </ItemGroup>
 
   <ItemGroup>
